# FastSearch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
fastsearch/: cli.py
fastsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fastsearch/config/: defaults.toml  settings.py
fastsearch/extractors/: router.py
fastsearch/gui/: app.py
fastsearch/gui/assets/qss/: dark.qss
fastsearch/gui/models/: facets_model.py  results_model.py
fastsearch/gui/style/: colors.py
fastsearch/gui/views/: delegates.py  facets_panel.py  main_window.py  preview_pane.py  results_view.py
fastsearch/index/: db.py  docs_repo.py  fts.py  schema.sql
fastsearch/service/: indexer.py  watcher.py
fastsearch_data/: fastsearch.db  fastsearch.db-shm  fastsearch.db-wal
scripts/: run_gui.py
tests/: test_docs_repo.py  test_gui_smoke.py  test_watch_service.py
